# AI

./: .env  pyproject.toml
src/ai/: __init__.py  model.py
src/ai/_internals/: __init__.py  _neuron.py  neuron.py
src/ais/: __init__.py  _artificial_neuron.py  _model.py  _script.py
tests/: model_tests.py  neuron_tests.py  run.py  test_artificial_neuron.py  test_model.py  test_neuron.py  test_script.py
visualise/: visualise_model.py  visualise_neuron.py
